<resources>
    <string name="app_name">ConectingLaw</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="register_as_a_lawyer">Registrarse como abogado</string>
    <string name="register_as_a_client">Registrarse como cliente</string>
    <string name="lawyer">Abogado</string>
    <string name="client">Cliente</string>
    <string name="tab_profile">Yo</string>
    <string name="menu_signout">Cerrar Sesión</string>
    <string name="menu_about">Acerca de</string>
    <string name="text_item">Message</string>

    <string name="register">Registro</string>
    <string name="tag">GY</string>
    <string name="your_name">Nombres</string>
    <string name="email">Correo</string>
    <string name="cedula">Cedula</string>
    <string name="penal">Penal</string>
    <string name="civil">Civil</string>
    <string name="mercantil">Mercantil</string>
    <string name="swipe_right_for_login">Volver</string>
    <string name="lawyerType">Tipo de Abogado</string>
    <string name="lastname">Apellidos</string>
    <string name="telephoneNumber">Celular</string>
    <string name="tab_chat">Chat</string>
    <string name="edt_hint_messageArea">Escribe un mensaje</string>
    <string name="fecha">fecha</string>
</resources>
