<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.CreateAccountActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/indigo_daisy"
        android:layout_marginTop="60dp"
        android:textColor="@color/primary_text"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag"
        android:textSize="17sp"
        android:textColor="@color/secondary_text"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/edt_custom"
        android:textSize="15sp"
        android:textColor="@color/primary_text"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textEmailAddress"
        android:background="@drawable/edt_custom"
        android:textSize="15sp"
        android:textColor="@color/primary_text"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:background="@drawable/edt_custom"
        android:textSize="15sp"
        android:textColor="@color/primary_text"/>

    <EditText
        android:id="@+id/edt_Cedula"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/cedula"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColor="@color/primary_text"
        />

    <CheckBox
        android:id="@+id/cb_PN"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:duplicateParentState="false"
        android:text="@string/cb_personaNatural"
        android:textColor="@color/primary_text"/>

    <CheckBox
        android:id="@+id/cb_PJ"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/personaJuridica" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:onClick="registrar"
                android:text="@string/register"
                android:textColor="@android:color/white"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_arrow_left"
                android:layout_above="@id/swipeLeft"
                android:layout_centerHorizontal="true"
                android:onClick="backToLogin"/>

            <TextView
                android:id="@+id/swipeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swipe_right_for_login"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_regular"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:textColor="@color/accent"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>